[ci] CORS 수정(#${closes})
 개발 환경에서 CORS 모두 허용